--- a/experimental/generics/index.html
+++ b/experimental/generics/index.html
@@ -94,6 +94,7 @@
                                 body = body.replace(/(\w)@\(/g, '$1(')
                                 body = body.replace(/(\w)#\(/g, '$1(')
                                 body = body.replace(/(\w)\$\(/g, '$1(')
+                                body = body.replace(/#\[[^\]]+\]/g, '($1)')
 
                                 writeToGoFilesystem('/main.go2', body);
                                 output({
